--- a/index.html
+++ b/index.html
@@ -44,16 +44,18 @@
             <h6 class="black">Compartilhe as suas melhores dicas com a vizinhança!</h6>
             <p class="banner-text black">Baixe aqui o aplicativo CASALINDA, disponível para iOS e Android e comece agora mesmo a compartilhar com sua comunidade as melhores dicas de fornecedores e terceirizados.</p>
             <ul>
-              <li><a href="#"><img src="images/appstore.png" class="wow fadeInUp" data-wow-delay="0.4s"/></a></li>
-              <li><a href="#"><img src="images/playstore.png" class="wow fadeInUp" data-wow-delay="0.7s"/></a></li>
+              <li><a href="#"><img src="images/appstore.png" class="wow fadeInUp" data-wow-delay="0.4s" alt="appstore"></a></li>
+              <li><a href="#"><img src="images/playstore.png" class="wow fadeInUp" data-wow-delay="0.7s" alt="playstore"></a></li>
             </ul>
           </div>
         </div>
-        <div class="col-md-4 col-sm-12"> <img src="images/home-casalinda.png" class="img-fluid wow fadeInUp"/> </div>
+        <div class="col-md-4 col-sm-12"> <img src="images/home-casalinda.png" class="img-fluid wow fadeInUp" alt="logo"> </div>
       </div>
     </div>
   </div>
-  <span class="svg-wave"> <img class="svg-hero" src=""> </span> </section>
+  <span class="svg-wave"> 
+	  <!-- <img class="svg-hero" src=""> -->
+  </span> </section>
 
 <!-------Banner End-------> 
 
@@ -150,7 +152,7 @@
               </div>
             </div>
             <div class="col-md-4 d-none d-md-block d-lg-block">
-              <div class="feature-mobile"> <img src="images/home-casalinda-sombra.png" class="img-fluid wow fadeInUp"/> </div>
+              <div class="feature-mobile"> <img src="images/home-casalinda-sombra.png" class="img-fluid wow fadeInUp" alt="teste"> </div>
             </div>
             <div class="col-md-4 col-sm-12">
               <div class="media single-feature wow fadeInUp" data-wow-delay="0.2s">
@@ -196,19 +198,19 @@
         <div class="section-content text-center">
           <div class="row">
             <div class="col-md-4">
-              <div class="team-detail wow bounce" data-wow-delay="0.2s"> <img src="images/felipe.png" class="img-fluid"/>
+              <div class="team-detail wow bounce" data-wow-delay="0.2s"> <img src="images/felipe.png" class="img-fluid" alt="teste">
                 <h4>Felipe Inácio</h4>
                 <p></p>
               </div>
             </div>
             <div class="col-md-4">
-              <div class="team-detail wow bounce" data-wow-delay="0.4s"> <img src="images/gustavo.png" class="img-fluid"/>
+              <div class="team-detail wow bounce" data-wow-delay="0.4s"> <img src="images/gustavo.png" class="img-fluid" alt="teste">
                 <h4>Gustavo Ortiz</h4>
                 <p></p>
               </div>
             </div>
             <div class="col-md-4">
-              <div class="team-detail wow bounce" data-wow-delay="0.6s"> <img src="images/moa.png" class="img-fluid"/>
+              <div class="team-detail wow bounce" data-wow-delay="0.6s"> <img src="images/moa.png" class="img-fluid" alt="teste">
                 <h4>Moacir Schneider</h4>
                 <p></p>
               </div>
@@ -383,8 +385,8 @@
       <div class="col-md-12">
         <div class="section-content text-center">
           <ul>
-            <li><a href="#"><img src="images/appstore.png" class="wow fadeInUp" data-wow-delay="0.4s"/></a></li>
-            <li><a href="#"><img src="images/playstore.png" class="wow fadeInUp" data-wow-delay="0.7s"/></a></li>
+            <li><a href="#"><img src="images/appstore.png" class="wow fadeInUp" data-wow-delay="0.4s" alt="teste"></a></li>
+            <li><a href="#"><img src="images/playstore.png" class="wow fadeInUp" data-wow-delay="0.7s" alt="teste"></a></li>
           </ul>
         </div>
       </div>
