--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" >
 <title>CASALINDA - Fortaleça a sua comunidade</title>
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.css">
 <link rel="stylesheet" href="css/animate.css">
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
-<link rel="stylesheet" type="text/css" href="style.css"/>
+<link rel="stylesheet" type="text/css" href="style.css">
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
 <!-- Font Google -->
 <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700" rel="stylesheet">
@@ -33,7 +33,7 @@
   </div>
 </nav>
 <!-- End Navbar --> 
-<!-------Banner Start------->
+<!--Banner Start-->
 <section class="banner" data-scroll-index='0'>
   <div class="banner-overlay">
     <div class="container">
@@ -57,9 +57,9 @@
 	  <!-- <img class="svg-hero" src=""> -->
   </span> </section>
 
-<!-------Banner End-------> 
+<!--Banner End--> 
 
-<!-------About End------->
+<!--About End-->
 
 <section class="about section-padding prelative" data-scroll-index='1'>
   <div class="container">
@@ -96,9 +96,9 @@
     </div>
   </div>
 </section>
-<!-------About End-------> 
+<!--About End--> 
 
-<!-------Video Start------->
+<!--Video Start-->
 <section class="video-section prelative text-center white">
   <div class="section-padding video-overlay">
     <div class="container">
@@ -114,9 +114,9 @@
     </div>
   </div>
 </section>
-<!-------Video End-------> 
+<!--Video End--> 
 
-<!-------Features Start------->
+<!--Features Start-->
 <section class="feature section-padding" data-scroll-index='2'>
   <div class="container">
     <div class="row">
@@ -183,9 +183,9 @@
     </div>
   </div>
 </section>
-<!-------Features End-------> 
+<!--Features End--> 
 
-<!-------Team Start------->
+<!--Team Start-->
 <section class="team section-padding" data-scroll-index='3'>
   <div class="container">
     <div class="row">
@@ -222,9 +222,9 @@
   </div>
 </section>
 
-<!-------Team End-------> 
+<!--Team End--> 
 
-<!-------Testimonial Start------->
+<!--Testimonial Start-->
 <section class="testimonial section-padding" data-scroll-index='4'>
   <div class="container">
     <div class="row">
@@ -260,9 +260,9 @@
   </div>
 </section>
 
-<!-------Testimonial End-------> 
+<!--Testimonial End--> 
 
-<!-------FAQ Start------->
+<!--FAQ Start-->
 <section class="faq section-padding prelative" data-scroll-index='5'>
   <div class="container">
     <div class="row">
@@ -305,9 +305,9 @@
   </div>
 </section>
 
-<!-------FAQ End-------> 
+<!--FAQ End--> 
 
-<!-------Contact Start------->
+<!--Contact Start-->
 <section class="contact section-padding" data-scroll-index='6'>
   <div class="container">
     <div class="row">
@@ -369,9 +369,9 @@
   </div>
 </section>
 
-<!-------Contact End-------> 
+<!--Contact End--> 
 
-<!-------Download End------->
+<!--Download End-->
 <section class="download section-padding">
   <div class="container">
     <div class="row">
@@ -394,7 +394,7 @@
   </div>
 </section>
 
-<!-------Download End------->
+<!--Download End-->
 
 <footer class="footer-copy">
   <div class="container-fluid">
