add página de login

--- a/index.html
+++ b/index.html
@@ -1,18 +1,19 @@
+
 <!DOCTYPE html>
-<html>
+<html lang="pt-BR">
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" >
 <title>CASALINDA - Fortaleça a sua comunidade</title>
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.css">
 <link rel="stylesheet" href="css/animate.css">
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
-<link rel="stylesheet" type="text/css" href="style.css"/>
+<link rel="stylesheet" type="text/css" href="style.css">
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
 <!-- Font Google -->
 <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Barlow:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-</head>
+<script type="text/javascript" src="https://gc.kis.v2.scr.kaspersky-labs.com/FD126C42-EBFA-4E12-B309-BB3FDD723AC1/main.js?attr=3tcYI7ImVMhbZ2dOLnr4Ygaa7rTDQSsMhC9IzGMvw2Y3mvC_IjBhpNp7Qy-DFe9I" charset="UTF-8"></script></head>
 
 <body>
 <!-- Navbar -->
@@ -33,7 +34,7 @@
   </div>
 </nav>
 <!-- End Navbar --> 
-<!-------Banner Start------->
+<!--Banner Start-->
 <section class="banner" data-scroll-index='0'>
   <div class="banner-overlay">
     <div class="container">
@@ -44,20 +45,23 @@
             <h6 class="black">Compartilhe as suas melhores dicas com a vizinhança!</h6>
             <p class="banner-text black">Baixe aqui o aplicativo CASALINDA, disponível para iOS e Android e comece agora mesmo a compartilhar com sua comunidade as melhores dicas de fornecedores e terceirizados.</p>
             <ul>
-              <li><a href="#"><img src="images/appstore.png" class="wow fadeInUp" data-wow-delay="0.4s"/></a></li>
-              <li><a href="#"><img src="images/playstore.png" class="wow fadeInUp" data-wow-delay="0.7s"/></a></li>
+              <li><a href="#"><img src="images/appstore.png" class="wow fadeInUp" data-wow-delay="0.4s" alt="appstore"></a></li>
+              <li><a href="#"><img src="images/playstore.png" class="wow fadeInUp" data-wow-delay="0.7s" alt="playstore"></a></li>
             </ul>
+            <p><a href="app.html">Entrar</a></p>
           </div>
         </div>
-        <div class="col-md-4 col-sm-12"> <img src="images/home-casalinda.png" class="img-fluid wow fadeInUp"/> </div>
+        <div class="col-md-4 col-sm-12"> <img src="images/home-casalinda.png" class="img-fluid wow fadeInUp" alt="logo"> </div>
       </div>
     </div>
   </div>
-  <span class="svg-wave"> <img class="svg-hero" src=""> </span> </section>
+  <span class="svg-wave"> 
+	  <!-- <img class="svg-hero" src=""> -->
+  </span> </section>
 
-<!-------Banner End-------> 
+<!--Banner End--> 
 
-<!-------About End------->
+<!--About End-->
 
 <section class="about section-padding prelative" data-scroll-index='1'>
   <div class="container">
@@ -94,9 +98,9 @@
     </div>
   </div>
 </section>
-<!-------About End-------> 
+<!--About End--> 
 
-<!-------Video Start------->
+<!--Video Start-->
 <section class="video-section prelative text-center white">
   <div class="section-padding video-overlay">
     <div class="container">
@@ -112,9 +116,9 @@
     </div>
   </div>
 </section>
-<!-------Video End-------> 
+<!--Video End--> 
 
-<!-------Features Start------->
+<!--Features Start-->
 <section class="feature section-padding" data-scroll-index='2'>
   <div class="container">
     <div class="row">
@@ -150,7 +154,7 @@
               </div>
             </div>
             <div class="col-md-4 d-none d-md-block d-lg-block">
-              <div class="feature-mobile"> <img src="images/home-casalinda-sombra.png" class="img-fluid wow fadeInUp"/> </div>
+              <div class="feature-mobile"> <img src="images/home-casalinda-sombra.png" class="img-fluid wow fadeInUp" alt="teste"> </div>
             </div>
             <div class="col-md-4 col-sm-12">
               <div class="media single-feature wow fadeInUp" data-wow-delay="0.2s">
@@ -181,9 +185,9 @@
     </div>
   </div>
 </section>
-<!-------Features End-------> 
+<!--Features End--> 
 
-<!-------Team Start------->
+<!--Team Start-->
 <section class="team section-padding" data-scroll-index='3'>
   <div class="container">
     <div class="row">
@@ -196,19 +200,19 @@
         <div class="section-content text-center">
           <div class="row">
             <div class="col-md-4">
-              <div class="team-detail wow bounce" data-wow-delay="0.2s"> <img src="images/felipe.png" class="img-fluid"/>
+              <div class="team-detail wow bounce" data-wow-delay="0.2s"> <img src="images/felipe.png" class="img-fluid" alt="teste">
                 <h4>Felipe Inácio</h4>
                 <p></p>
               </div>
             </div>
             <div class="col-md-4">
-              <div class="team-detail wow bounce" data-wow-delay="0.4s"> <img src="images/gustavo.png" class="img-fluid"/>
+              <div class="team-detail wow bounce" data-wow-delay="0.4s"> <img src="images/gustavo.png" class="img-fluid" alt="teste">
                 <h4>Gustavo Ortiz</h4>
                 <p></p>
               </div>
             </div>
             <div class="col-md-4">
-              <div class="team-detail wow bounce" data-wow-delay="0.6s"> <img src="images/moa.png" class="img-fluid"/>
+              <div class="team-detail wow bounce" data-wow-delay="0.6s"> <img src="images/moa.png" class="img-fluid" alt="teste">
                 <h4>Moacir Schneider</h4>
                 <p></p>
               </div>
@@ -220,9 +224,9 @@
   </div>
 </section>
 
-<!-------Team End-------> 
+<!--Team End--> 
 
-<!-------Testimonial Start------->
+<!--Testimonial Start-->
 <section class="testimonial section-padding" data-scroll-index='4'>
   <div class="container">
     <div class="row">
@@ -258,9 +262,9 @@
   </div>
 </section>
 
-<!-------Testimonial End-------> 
+<!--Testimonial End--> 
 
-<!-------FAQ Start------->
+<!--FAQ Start-->
 <section class="faq section-padding prelative" data-scroll-index='5'>
   <div class="container">
     <div class="row">
@@ -303,9 +307,9 @@
   </div>
 </section>
 
-<!-------FAQ End-------> 
+<!--FAQ End--> 
 
-<!-------Contact Start------->
+<!--Contact Start-->
 <section class="contact section-padding" data-scroll-index='6'>
   <div class="container">
     <div class="row">
@@ -318,7 +322,7 @@
         <div class="section-content">
           <div class="row">
             <div class="col-sm-12 col-md-12 col-lg-8">
-              <form id="contact_form" action="">
+              <form id="contact_form">
                 <div class="row">
                   <div class="col">
                     <input type="text" id="your_name" class="form-input w-100" name="full-name" placeholder="Nome" required>
@@ -367,9 +371,9 @@
   </div>
 </section>
 
-<!-------Contact End-------> 
+<!--Contact End--> 
 
-<!-------Download End------->
+<!--Download End-->
 <section class="download section-padding">
   <div class="container">
     <div class="row">
@@ -383,8 +387,8 @@
       <div class="col-md-12">
         <div class="section-content text-center">
           <ul>
-            <li><a href="#"><img src="images/appstore.png" class="wow fadeInUp" data-wow-delay="0.4s"/></a></li>
-            <li><a href="#"><img src="images/playstore.png" class="wow fadeInUp" data-wow-delay="0.7s"/></a></li>
+            <li><a href="#"><img src="images/appstore.png" class="wow fadeInUp" data-wow-delay="0.4s" alt="teste"></a></li>
+            <li><a href="#"><img src="images/playstore.png" class="wow fadeInUp" data-wow-delay="0.7s" alt="teste"></a></li>
           </ul>
         </div>
       </div>
@@ -392,7 +396,7 @@
   </div>
 </section>
 
-<!-------Download End------->
+<!--Download End-->
 
 <footer class="footer-copy">
   <div class="container-fluid">
