--- a/app.html
+++ b/app.html
@@ -158,7 +158,7 @@
 <body>
     <div class="margin">
         <div class="container">
-            <img src="src/images/logo.svg" alt="" class="logo">
+            <img src="images/logo.svg" alt="" class="logo">
             <div class="forms">
                 <input type="text" placeholder="E-mail" class="forms__email">
                 <input type="email" placeholder="Senha" class="forms__senha">
